# youtube_analytics

./: .gitignore  EDA.ipynb  README.md  app.py  contractions.py  correlation_analysis.py  distribution_analysis.py  graphical_analysis.py  insights.py  kpi_analysis.py  load_data.py  misc_analysis.py  promotional_analysis.py  pyproject.toml  requirement.txt  scatter_analysis.py  top5_analysis.py
assets/css/: corr.css  home_page.css  insights.css  kpi_style.css  scatter.css  style.css  trend_channel.css
assets/wc_data/: ind_hastags_description.xlsx  ind_hastags_tags.xlsx  ind_hastags_title.xlsx  ind_wc_description.xlsx  ind_wc_tags.xlsx  ind_wc_title.xlsx  usa_hastags_description.xlsx  usa_hastags_tags.xlsx  usa_hastags_title.xlsx  usa_wc_description.xlsx  usa_wc_tags.xlsx  usa_wc_title.xlsx
pages/: about_us.py  agg_metrics.py  archieve.py  home.py  trend_chart.py
