[tool.poetry]
name = "youtube-analytics"
version = "0.1.0"
description = "The Dash app to compare and analyse the market trends of two various regions (US & India)"
authors = ["Arunachalam"]
readme = "README.md"
packages = [{include = "youtube_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dash = "^2.11.1"
dash-bootstrap-components = "^1.4.2"
plotly = "^5.16.0"
pandas = "^2.0.3"
nltk = "^3.8.1"
matplotlib = "^3.7.2"
wordcloud = "^1.9.2"
emoji = "^2.8.0"
imageai = "2.1.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
opencv-python = "^4.8.0.76"
seaborn = "^0.12.2"
numpy = "^1.25.2"
keras = "^2.13.1"
openpyxl = "^3.1.2"
notebook = "^7.0.2"
dash-daq = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
